--- a/config/filebeat.yml
+++ b/config/filebeat.yml
@@ -11,6 +11,29 @@ filebeat.config.modules:
   path: ${path.config}/modules.d/*.yml
   reload.enabled: false
 
+filebeat.modules:
+- module: system
+  syslog:
+    enabled: true
+  auth:
+    enabled: true
+
+- module: auditd
+  log:
+    enabled: true
+
+- module: nginx
+  access:
+    enabled: true
+  error:
+    enabled: true
+
+- module: apache
+  access:
+    enabled: true
+  error:
+    enabled: true
+
 setup.template.settings:
   index.number_of_shards: 1
 
